--- a/Vayager1.html
+++ b/Vayager1.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="col-sm">
                         <div class="row-sm text-center">
-                            <h1 class="nav-brand" style="color: rgb(255, 255,255);;">Vayager-1</h1>
+                            <h1 class="nav-brand" style="color: rgb(255, 255,255);;">Voyager-1</h1>
                             <p style="color: rgb(0, 255, 242);"><b>Voyager 1 visited Jupiter in March of 1979. This was
                                     the first time a spacecraft had visited the outer solar system, and it was a major
                                     milestone in the exploration of our solar system.
